--- a/week4 assignment 2/img/index.html
+++ b/week4 assignment 2/img/index.html
@@ -32,7 +32,7 @@
 <section class="lesson-masthead">
     <h1>Get Your Pizza Here</h1>
 </section>
-
+<!-- This is main-->
 <main>
     <section>
         <h2>Italian Pizza</h2>
@@ -75,6 +75,7 @@
 
 
 </main>
+    <!--THis is aside-->
 <aside>
 <article>
     <h2>Gyro</h2>
@@ -101,6 +102,7 @@
 
     </article>
 </aside>
+    <!-- THis is footer-->
 <footer>
     <div>
         <a href="index.html"><img src="logo%20(2).png" alt="footer logo"> </a>
